--- a/assets/latex_text/Structure/Chapter8.tex
+++ b/assets/latex_text/Structure/Chapter8.tex
@@ -1,4 +1,5 @@
 \chapter{ปัญหาการหาค่าเหมาะสุดต่าง ๆ ในเชิงธุรกิจ (Optimization Problem in Business)}
+\section{Zero-sum game as Linear Programming}
 \section{Transportation Problem}
 \section{Scheduling Problem}
 \section{Matching Problem}
