--- a/assets/latex_text/Structure/homework.tex
+++ b/assets/latex_text/Structure/homework.tex
@@ -219,3 +219,108 @@ C (สมดุล) & 284 & 497 & 213 \\
 	\end{tabular}
 \end{center}
 ในการบ้านนี้ให้นักศึกษาลองพิจารณาการผสมกลยุทธ์ของแบบสีและแบบขาวดำ (คำเตือน: ต้องพิจารณาแบบ minimax เพราะเป็นตารางผลตอบแทนของร้านขาว)
+
+\newpage
+\section*{Homework 7: การบ้านสุดท้าย เตรียมก่อนสอบ}
+วันสั่ง: 16 กันยายน 2568\\
+กำหนดส่ง: เสาร์ที่ 13 กันยายน 21:00 น.
+
+การบ้านนี้จะเน้นเพื่อเตรียมตัวก่อนสอบ ที่สามารถจดโน๊ตเข้าห้องสอบได้ 1 แผ่นตามคำสั่งหน้าข้อสอบดังนี้
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.7\linewidth]{instruction-final}
+\end{figure}
+
+เพราะฉะนั้น ในการบ้านนี้พวกเราจะมาทบทวนสิ่งที่จำเป็นก่อนสอบเพื่อเป็นแนวทางให้นักศึกษาสามารถจดโน๊ตเข้าห้องสอบได้อย่างมีประสิทธิภาพ จงตอบคำถามต่อไปนี้
+
+\section*{การวิเคราะห์มาร์คอฟ}
+สูตรในการคำนวณเกี่ยวกับมาร์คอฟมีเพียงสูตรเดียวดังนี้
+\begin{equation}
+	\vec{N}^{(t+1)} = T\vec{N^{(t)}}
+\end{equation}
+\begin{enumerate}
+	\item เมทริกซ์ความน่าจะเป็นของการเปลี่ยนสถานะ ($T$) จะต้องมีสิ่งที่คำนึงเรื่องการเขียนดังนี้
+	\begin{itemize}
+		\item การเรียงตัวกันของสถานะในแนวแถวและแนวคอลัมน์ต้องเรียงตัวเหมือนกัน  แต่เพราะเหตุใดเราจึงเขียนการเรียงตัวกันของค่าความน่าจะเป็นในเมทริกซ์การเปลี่ยนสถานะให้ค่าที่มาจากสถานะต้นทางเดียวกันอยู่ในคอลัมน์เดียวกัน และค่าที่มีสถานะปลายทางเดียวกันอยู่ในแถวนอนเดียวกัน
+		\item วิธีการหนึ่งที่นักศึกษาจะสามารถตรวจสอบได้ว่านำค่าความน่าจะเป็นของการเปลี่ยนสถานะมาเขียนเรียงกันในเมทริกซ์ได้ถูกต้องหรือไม่คือการดูว่าผลรวมของความน่าจะเป็นในคอลัมน์เดียวกันต้องได้ 1 ในทุก ๆ คอลัมน์ จงอธิบายว่าเพราะเหตุใดถึงทำให้ผลรวมของค่าในคอลัมน์เดียวกันเป็น 1 ในทุก ๆ คอลัมน์
+		\item เพราะฉะนั้น ถ้านักศึกษาวาดแผนภาพการเปลี่ยนสถานะได้ดังรูป (ในข้อสอบไม่มีให้วาด) จะได้เมทริกซ์การเปลี่ยนสถานะเป็นอย่างไร
+		\begin{center}
+			\begin{tikzpicture}[scale=0.15]
+				\tikzstyle{every node}+=[inner sep=0pt]
+				\draw [black] (41.2,-18.6) circle (3);
+				\draw (41.2,-18.6) node {$1$};
+				\draw [black] (30.7,-33.8) circle (3);
+				\draw (30.7,-33.8) node {$2$};
+				\draw [black] (53.4,-33.8) circle (3);
+				\draw (53.4,-33.8) node {$3$};
+				\draw [black] (40.263,-21.448) arc (-21.32007:-47.95255:27.617);
+				\fill [black] (40.26,-21.45) -- (39.51,-22.01) -- (40.44,-22.38);
+				\draw (37.86,-28.46) node [right] {$c$};
+				\draw [black] (31.764,-30.996) arc (156.57389:134.15349:32.536);
+				\fill [black] (31.76,-31) -- (32.54,-30.46) -- (31.62,-30.06);
+				\draw (34.25,-24.08) node [left] {$b$};
+				\draw [black] (43.691,-20.269) arc (53.08227:24.42099:27.813);
+				\fill [black] (52.31,-31.01) -- (52.43,-30.07) -- (51.52,-30.49);
+				\draw (49.24,-23.67) node [right] {$e$};
+				\draw [black] (51.153,-31.813) arc (-133.25624:-149.24051:48.829);
+				\fill [black] (42.65,-21.22) -- (42.63,-22.17) -- (43.49,-21.66);
+				\draw (45.97,-28.24) node [left] {$d$};
+				\draw [black] (39.877,-15.92) arc (234:-54:2.25);
+				\draw (41.2,-11.35) node [above] {$a$};
+				\fill [black] (42.52,-15.92) -- (43.4,-15.57) -- (42.59,-14.98);
+				\draw [black] (56.388,-33.816) arc (117.43495:-170.56505:2.25);
+				\draw (60.13,-37.93) node [right] {$i$};
+				\fill [black] (55.21,-36.18) -- (55.13,-37.12) -- (56.02,-36.66);
+				\draw [black] (30.455,-36.778) arc (23.03624:-264.96376:2.25);
+				\draw (26.23,-40.09) node [below] {$g$};
+				\fill [black] (28.19,-35.42) -- (27.26,-35.27) -- (27.65,-36.19);
+				\draw [black] (33.655,-33.285) arc (98.39146:81.60854:57.525);
+				\fill [black] (50.44,-33.29) -- (49.73,-32.67) -- (49.58,-33.66);
+				\draw (42.05,-32.17) node [above] {$f$};
+				\draw [black] (50.483,-34.5) arc (-78.53386:-101.46614:42.424);
+				\fill [black] (33.62,-34.5) -- (34.3,-35.15) -- (34.5,-34.17);
+				\draw (42.05,-35.85) node [below] {$h$};
+			\end{tikzpicture}
+		\end{center}
+	\end{itemize}
+	\item เวกเตอร์แสดงอัตราส่วนของแต่ละสถานะ ($\vec{N}$) ซึ่งจะต้องมีลำดับการเรียงตัวของสถานะเหมือนกันกับลำดับของสถานะในเมทริกซ์ $T$
+	\begin{itemize}
+		\item เราสามารถเขียนแสดงผลได้ 2 แบบคือ (1) เวกเตอร์แสดงจำนวนคนจริง ๆ ในแต่ละสถานะ หรือ (2) เวกเตอร์แสดงความน่าจะเป็นของแต่ละสถานะ แต่ถ้าเรามีเวกเตอร์แสดงจำนวนคนอยู่ก่อน แต่โจทย์ถามเวกเตอร์ความน่าจะเป็น (หรืออัตราส่วน) จะต้องหาอย่างไร
+		\item จงคำนวณหาเวกเตอร์แสดงความน่าจะเป็นของแต่ละสถานะจากเวกเตอร์แสดงจำนวนคน $\begin{pmatrix}
+			50\\ 80\\ 70
+		\end{pmatrix}$
+	\end{itemize}
+	\item สรุปแล้วลักษณะของปัญหาที่แก้ได้ด้วยการวิเคราะห์มาร์คอฟคือปัญหาแบบใด
+\end{enumerate}
+
+
+\section*{การทำนายและพยากรณ์}
+กระบวนการสำคัญของการหาค่าพยากรณ์คือ (1) เตรียมข้อมูล (2) เลือกตัวแบบ (3) คำนวณตัวเบบ และ (4) วัดผลความแม่นยำของการพยากรณ์
+\begin{enumerate}
+	\item ในการพยากรณ์โดยใช้ตัวแบบอนุกรมเวลา ลำดับของค่าที่จะนำมาพยากรณ์ต้องเป็นอย่างไร
+	\item จงระบุสูตรของตัวแบบ และอธิบายวิธีการคำนวณของแต่ละสูตรของการทำตัวแบบอนุกรมเวลา
+	\begin{itemize}
+		\item Simple moving average ของระยะเวลา $n$ เดือน
+		\item Weighted moving average ของระยะเวลา $n$ เดือนแบบกำหนดน้ำหนักด้วยตัวเองเป็น $w_n, w_{n-1}, \dots, w_2, w_1$ ของเดือนย้อนหลัง 1 เดือนจนถึง n เดือนตามลำดับ
+		\item Exponential smoothing เหมือนกำหนด $alpha$
+	\end{itemize}
+	\item ในการวัดผล เราจะใช้วิธีที่เบสิคที่สุดในการวัดผล ซึ่งคือ \textbf{ค่าเฉลี่ยความคลาดเคลื่อนสมบูรณ์} (Mean Absolute Error หรือ Mean Absolute Division) จงระบุสูตรและอธิบายวิธีการคำนวณ 
+\end{enumerate}
+
+
+\section*{ทฤษฎีแถวคอย}
+แท้ที่จริงแล้ว ตัวแบบ M/M/1 ก็เป็นกรณีเฉพาะของตัวแบบ M/M/s โดยที่ $s=1$ จงใช้สูตรของ M/M/s เพื่อคำนวณกรณีเฉพาะที่ $s=1$ แล้วดูความแตกต่างระหว่างสูตรของ M/M/1 กับสูตรที่ได้จากการแทน $s=1$ ใน M/M/s
+
+
+\section*{ทฤษฎีเกม}
+ในบททฤษฎีเกม เราสนใจกรณี Zero-sum game กล่าวคือเป็นเกมที่ผู้ชนะได้เท่าไหร่ ผู้แพ้จะเสียเท่านั้น
+\begin{enumerate}
+	\item ในการคำนวณค่าของเกม สิ่งที่เราสมมติคือผู้เล่นทั้ง 2 ฝ่ายเป็นผู้ที่สามารถเลือกกลยุทธ์การเล่นแบบดีที่สุดได้เสมอ จึงทำให้เข้ารูปแบบการคิดด้วยการใช้ Maximin และการใช้ Minimax คำถามคือเราใช้เกณฑ์อะไรในการตัดสินใจว่าในตารางที่ให้มาผู้เล่นฝ่ายใดต้องใช้ Maximin และผู้เล่นฝ่ายใดต้องใช้ Minimax
+	\item ทั้งนี้ ในห้องเรียน อาจารย์ไม่ได้สอนอีกหัวข้อที่อาจารย์ท่านอื่นนำมาออกข้อสอบ ซึ่งคือหัวข้อ ``กลยุทธ์เด่น'' คือการที่ทั้ง 2 ฝ่ายมีกลยุทธ์มากกว่า 2 กลยุทธ์ทั้งคู่ ทำให้เราไม่สามารถใช้วิธีการแบ่งอัตราส่วนอกอเป็น $p, 1-p$ ได้ จึงต้องทำการตัดกลยุทธ์ที่ไม่ดีออกไปก่อน กล่าวคือทำให้เหลือตาราง $2\times n$ หรือ ตาราง $m \times 2$ ให้ได้ก่อน ซึ่งจะใช้วิธีการดูว่ากลยุทธ์ใดที่ให้ผลลัพธ์แย่กว่ากลยุทธ์อื่นในทุก ๆ การเล่นของอีกฝ่าย เราจะตัดกลยุทธ์นั้นทิ้งทันที นักศึกษาสามารถอ่านเพิ่มเติมได้ที่หน้าที่ 282 ในลิงค์ \url{https://blog.bru.ac.th/wp-content/uploads/2024/10/%E0%B9%80%E0%B8%AD%E0%B8%81%E0%B8%AA%E0%B8%B2%E0%B8%A3%E0%B8%9B%E0%B8%A3%E0%B8%B0%E0%B8%81%E0%B8%AD%E0%B8%9A%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%AA%E0%B8%AD%E0%B8%99%E0%B8%A7%E0%B8%B4%E0%B8%8A%E0%B8%B2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%A7%E0%B8%B4%E0%B9%80%E0%B8%84%E0%B8%A3%E0%B8%B2%E0%B8%B0%E0%B8%AB%E0%B9%8C%E0%B9%80%E0%B8%8A%E0%B8%B4%E0%B8%87%E0%B8%9B%E0%B8%A3%E0%B8%B4%E0%B8%A1%E0%B8%B2%E0%B8%93%E0%B8%97%E0%B8%B2%E0%B8%87%E0%B8%98%E0%B8%B8%E0%B8%A3%E0%B8%81%E0%B8%B4%E0%B8%88-2024.pdf} (ควรจะกดเข้าลิงค์ผ่าน pdf ได้ แต่ถ้ากดไม่ได้อาจารย์จะโพสต์ลิงค์ไว้ในการบ้านอีกที) - และอาจารย์ขอสอนเพิ่มให้ผ่านในวิดีโอ
+\end{enumerate}
+
+
+
+
+
+
