edit project and public

--- a/assets/latex_text/Structure/Chapter5.tex
+++ b/assets/latex_text/Structure/Chapter5.tex
@@ -13,4 +13,75 @@
 \newpage
 \includepdf[pages=-]{Quantitative_Analysis_250907.pdf}
 
+\section{เกณฑ์กลยุทธ์เด่น}
+ในกรณีที่มีกลยุทธ์มากกว่า 2 กลยุทธ์ การวิเคราะห์กลยุทธ์ผสมด้วยวิธีที่ศึกษาไปในหัวข้อที่ผ่านมาจะไม่สามารถนำมาใช้ได้ เนื่องจากเป็นการผสมกลยุทธ์แบบ $(p, 1-p)$ ทำให้สามารถคำนวณได้กับแค่กรณี 2 กลยุทธ์เท่านั้น เราจึงทำการลดทอนตารางให้มีขนาดเล็กลงทั้งในแนวแถวและแนวหลัก ซึ่งในบางกรณีอาจจะลดทอนได้จนถึงกรณีที่ฝ่ายใดฝ่ายหนึ่งเหลือกลยุทธ์เดียวและสามารถหาค่าของเกมจากตารางดังกล่าวได้โดยง่าย
+
+เกณฑ์ในการลดทอนคือเกณฑ์การถูกครอบงำโดยกลยุทธ์อื่น โดยที่
+\begin{definition}
+	{เกณฑ์การถูกครอบงำ}{}
+	ในตารางผลตอบแทนของการแข่งขันที่กำหนดให้ \textbf{กลยุทธ์ A ถูกครอบงำโดยกลยุทธ์ B} ถ้าไม่ว่าอีกฝ่ายจะเล่นกลยุทธ์ใดก็ตามค่าของกลยุทธ์ A จะแย่กว่าค่าของกลยุทธ์ B เสมอ ซึ่งถ้าเจอกลยุทธ์ใดก็ตามที่ถูกครอบงำด้วยกลยุทธ์อื่นก็จะสามารถตัดออกจากตัวเลือกการตัดสินใจได้ทันที เพราะไม่มีประโยชน์ที่จะเล่นกลยุทธ์ดังกล่าวแล้ว
+\end{definition}
+\begin{remark}
+	{กลยุทธ์ที่ดีกว่าหรือแย่กว่า}{}
+	สมมติให้ตารางผลตอบแทนที่มีเป็นผลตอบแทนของฝ่ายที่เล่นกลยุทธ์ตามแถว กล่าวคือเราจะหา maximin ของแต่ละแถว และหา minimax ของแต่ละหลัก
+	\begin{itemize}
+		\item ถ้าพิจารณากลยุทธ์ตามแถว (กลยุทธ์ฝ่ายผู้เล่น) กลยุทธ์ที่ดีกว่าคือกลยุทธ์ที่มีค่าผลตอบแทนมากกว่า
+		\item ถ้าพิจารณากลยุทธ์ตามหลัก (กลยุทธ์ฝ่ายตรงข้าม) กลยุทธ์ที่ดีกว่าคือกลยุทธ์ที่มีค่าผลตอบแทนน้อยกว่า (เพราะฝ่ายตรงข้ามเสียหายน้อยกว่า)
+	\end{itemize}
+\end{remark}
+
+\begin{example}
+	{ตัวอย่างที่ถูกตัดกลยุทธ์ที่ถูกครอบงำออกจนเหลือกรณีกลยุทธ์บริสุทธ์}{}
+	กำหนดให้ตารางผลตอบแทนด้านล่างเป็นตารางผลตอบแทนของ Player 1 ในเกมผลรวมเป็นศูนย์
+	\begin{enumerate}
+		\item พิจารณาว่าในบรรดากลยุทธ์ของ Player 1 มีกลยุทธ์ใดบ้างที่ถูกครอบงำและถูกครอบงำด้วยกลยุทธ์ใด
+		\item จากข้อที่แล้ว ให้ตัดกลยุทธ์ที่ถูกครอบงำทั้งหมดทิ้ง และพิจารณากลยุทธ์ที่ถูกครอบงำในบรรดากลยุทธ์ของ Player 2
+		\item ตัดกลยุทธ์ที่ถูกครอบงำออกและวนทำไปเรื่อยๆ จนกว่าจะตัดกลยุทธ์ต่อไม่ได้อีกแล้ว
+	\end{enumerate}
+	~\\
+	\begin{tabular}{|c|c|ccc|}
+		\hline
+		&   & \multicolumn{3}{c|}{Player 2}                         \\ \hline
+		&   & \multicolumn{1}{c|}{X}  & \multicolumn{1}{c|}{Y} & Z  \\ \hline
+		\multirow{4}{*}{Player 1} & A & \multicolumn{1}{c|}{1}  & \multicolumn{1}{c|}{0} & 10 \\ \cline{2-5} 
+		& B & \multicolumn{1}{c|}{-1} & \multicolumn{1}{c|}{0} & 9  \\ \cline{2-5} 
+		& C & \multicolumn{1}{c|}{2}  & \multicolumn{1}{c|}{1} & 8  \\ \cline{2-5} 
+		& D & \multicolumn{1}{c|}{-2} & \multicolumn{1}{c|}{0} & 7  \\ \hline
+	\end{tabular}
+\end{example}
+
+\begin{example}
+	{ตัวอย่างที่ถูกตัดกลยุทธ์ที่ถูกครอบงำออกจนเหลือกรณี 2 กลยุทธ์}{}
+	กำหนดให้ตารางผลตอบแทนด้านล่างเป็นตารางผลตอบแทนของ Player 1 ในเกมผลรวมเป็นศูนย์ ซึ่งกรณีนี้จะไม่มีกลยุทธ์บริสุทธิ์ จึงต้องทำการผสมกลยุทธ์ จงหาค่าของเกมจากการผสมกลยุทธ์\\
+	\begin{tabular}{|c|c|ccc|}
+		\hline
+		&   & \multicolumn{3}{c|}{Player 2}                         \\ \hline
+		&   & \multicolumn{1}{c|}{X}  & \multicolumn{1}{c|}{Y} & Z  \\ \hline
+		\multirow{4}{*}{Player 1} & A & \multicolumn{1}{c|}{38}  & \multicolumn{1}{c|}{37} & 39 \\ \cline{2-5} 
+		& B & \multicolumn{1}{c|}{25} & \multicolumn{1}{c|}{40} & 41  \\ \cline{2-5} 
+		& C & \multicolumn{1}{c|}{35}  & \multicolumn{1}{c|}{32} & 45  \\ \cline{2-5} 
+		& D & \multicolumn{1}{c|}{38} & \multicolumn{1}{c|}{30} & 42  \\ \hline
+	\end{tabular}
+\end{example}
+\newpage
+
+
+\begin{example}
+	{ตัวอย่างที่ถูกตัดกลยุทธ์ที่ถูกครอบงำออกแต่ยังเหลือกลยุทธ์มากกว่า 2 กลยุทธ์ (แนวข้อสอบ)}{}
+	กำหนดให้ตารางผลตอบแทนด้านล่างเป็นตารางผลตอบแทนของ Player 1 ในเกมผลรวมเป็นศูนย์ ซึ่งกรณีนี้จะไม่มีกลยุทธ์บริสุทธิ์ จึงต้องทำการผสมกลยุทธ์ จงหาค่าของเกมจากการผสมกลยุทธ์\\
+	\begin{tabular}{|c|c|ccccc|}
+		\hline
+		&   & \multicolumn{5}{c|}{Player 2}                         \\ \hline
+		&   & \multicolumn{1}{c|}{X}  & \multicolumn{1}{c|}{Y} & \multicolumn{1}{c|}{Z} & \multicolumn{1}{c|}{W} & V \\ \hline
+		\multirow{4}{*}{Player 1} 
+		& A & \multicolumn{1}{c|}{6}  & \multicolumn{1}{c|}{1} & \multicolumn{1}{c|}{-4} & \multicolumn{1}{c|}{-8} & -3 \\ \cline{2-7} 
+		& B & \multicolumn{1}{c|}{-5} & \multicolumn{1}{c|}{-2} & \multicolumn{1}{c|}{2}  & \multicolumn{1}{c|}{6}  & 3  \\ \cline{2-7} 
+		& C & \multicolumn{1}{c|}{5}  & \multicolumn{1}{c|}{3} & \multicolumn{1}{c|}{-3} & \multicolumn{1}{c|}{-7} & -2 \\ \cline{2-7} 
+		& D & \multicolumn{1}{c|}{4}  & \multicolumn{1}{c|}{2} & \multicolumn{1}{c|}{-5} & \multicolumn{1}{c|}{-9} & -4 \\ \hline
+	\end{tabular}
+\end{example}
+\newpage
+
+
+
 \section{การจัดรูปปัญหาเกมผลรวมเป็นศูนย์ให้อยู่ในรูปกำหนดการเชิงเส้น}
