--- a/assets/latex_text/BookTemplate.tex
+++ b/assets/latex_text/BookTemplate.tex
@@ -1,25 +1,29 @@
-\documentclass[a4paper, 12pt]{book}
+\documentclass[12pt,twoside,openright]{book} % removed a4paper
 
+% ===============================
+% Custom/local packages (as in your project)
+% ===============================
 \usepackage{Custom}                         %%%%%%%%%%%%%%%%%%    (EDIT NAMES)
 \usepackage{AuxiliaryFiles/AuxiliaryFiles}  %%%%%%%%%%%%%%%%%%   (DO NOT EDIT)
 \usepackage{Custom-2}                       %%%%%%%%%%%%%%%%%%          (EDIT)
+
+% ===============================
+% Core packages
+% ===============================
 \usepackage{amssymb,amsmath,amsthm,graphicx,mathrsfs}
 \usepackage{fontspec}
-%\usepackage{polyglossia}
+% \usepackage{polyglossia}
+
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.17}
 \usepackage{pgfplotstable}
+
 \usepackage{booktabs}
-% \newfontfamily\thaifont[Script=Thai]{TH Sarabun New}
-% \usepackage[utf8]{inputenc} 
-\usepackage{fontawesome} % สำหรับไอคอน (ถ้าต้องการ)
-\usepackage{geometry} 
-\usepackage{tikz} 
-\usetikzlibrary{arrows.meta, positioning}
+\usepackage{fontawesome}
 \usepackage{xcolor}
 \usepackage{amsrefs}
 % \usepackage[bookmarks]{hyperref}
-\usepackage{lipsum}  
+\usepackage{lipsum}
 \usepackage{forloop}
 \usepackage{ifthen}
 \usepackage{tcolorbox}
@@ -27,83 +31,129 @@
 % \tcbuselibrary{minted}
 % \usepackage{minted}
 \usepackage{array}
-\usepackage{booktabs}
 \usepackage{setspace}
 \usepackage{tasks}
-\onehalfspacing
 \tcbuselibrary{theorems}
-\newtcbtheorem[number within=section]{definition}{นิยาม}%
-{colback=blue!5!white, colframe=blue!75!black, fonttitle=\bfseries,  separator sign={: }}{def}
-\newtcbtheorem[number within=section]{theorem}{ทฤษฎีบท}%
-{colback=green!5!white, colframe=green!60!black, fonttitle=\bfseries,  separator sign={: }}{thm}
-\newtcbtheorem[number within=section]{corollary}{บทตาม}%
-{colback=green!5!white, colframe=green!60!black, fonttitle=\bfseries,  separator sign={: }}{thm}
-\newtcbtheorem[number within=section]{example}{ตัวอย่าง}%
-{colback=orange!5!white, colframe=orange!75!black, fonttitle=\bfseries,  separator sign={: }, breakable}{ex}
-\newtcbtheorem[number within=section]{exercise}{Exercise}%
-{colback=orange!5!white, colframe=orange!75!black, fonttitle=\bfseries,  separator sign={: }}{exer}
-\newtcbtheorem[number within=chapter]{property}{คุณสมบัติ}%
-{colback=green!5!white, colframe=green!75!black, fonttitle=\bfseries,  separator sign={: }}{pro}
-\newtcbtheorem[number within=chapter]{algorithm}{ขั้นตอน}%
-{colback=black!5!white, colframe=black!75!black, fonttitle=\bfseries,  separator sign={: }}{algo}
-\newtcbtheorem{remark}{หมายเหตุ}%
-{colback=black!0!white, colframe=black!75!black, fonttitle=\bfseries,  separator sign={: }}{remark}
-\usetikzlibrary{shapes.geometric}
-
-\usepackage{imakeidx}
-\makeindex
 \usepackage{wrapfig}
-\usepackage{pgfplots}
-\pgfplotsset{compat=1.17}
 \usepackage{xfp}
-\linespread{1.3} 
+\usepackage{multicol}
+\usepackage{multirow}
+\usepackage{pdfpages}
+% \usepackage[toc]{appendix} % (add if your 'appendices' env needs it)
 
-\setmainfont{THSarabun.ttf}[Scale=1.2, Path=./, UprightFont=*, BoldFont=* Bold, ItalicFont=* Italic, BoldItalicFont=* Bold Italic]
+% ===============================
+% PRESS TRIM SIZE AND MARGINS (190 x 260 mm)
+% ===============================
+\usepackage{geometry}
+\geometry{
+	paperwidth=190mm,
+	paperheight=260mm,
+	inner=24mm,
+	outer=18mm,
+	top=20mm,
+	bottom=28mm,
+	bindingoffset=6mm,
+	includeheadfoot,
+	heightrounded
+}
+
+% ===============================
+% Thai font + XeTeX linebreaks
+% ===============================
+\setmainfont{THSarabun.ttf}[
+Scale=1.2,
+Path=./,
+UprightFont = *,
+BoldFont    = * Bold,
+ItalicFont  = * Italic,
+BoldItalicFont = * Bold Italic
+]
+
 \XeTeXlinebreaklocale "th"
-\XeTeXlinebreakskip = 0pt plus 1pt  % << เพิ่มอันนี้เข้าไป
+\XeTeXlinebreakskip = 0pt plus 1pt
 
+% ===============================
+% Sectioning (Thai script in counters/titles)
+% ===============================
 \makeatletter
 \renewcommand{\@seccntformat}[1]{\addfontfeatures{Script=Thai}\csname the#1\endcsname\quad}
 
 \renewcommand\section{\@startsection {section}{1}{\z@}%
-  {-3.5ex \@plus -1ex \@minus -.2ex}%
-  {2.3ex \@plus.2ex}%
-{\normalfont\Large\bfseries\addfontfeatures{Script=Thai}}}
+	{-3.5ex \@plus -1ex \@minus -.2ex}%
+	{2.3ex \@plus.2ex}%
+	{\normalfont\Large\bfseries\addfontfeatures{Script=Thai}}}
 
 \renewcommand\subsection{\@startsection{subsection}{2}{\z@}%
-  {-3.25ex\@plus -1ex \@minus -.2ex}%
-  {1.5ex \@plus .2ex}%
-  {\normalfont\large\bfseries\addfontfeatures{Script=Thai}}}
+	{-3.25ex\@plus -1ex \@minus -.2ex}%
+	{1.5ex \@plus .2ex}%
+	{\normalfont\large\bfseries\addfontfeatures{Script=Thai}}}
 
 \renewcommand\subsubsection{\@startsection{subsubsection}{3}{\z@}%
-  {-3.25ex\@plus -1ex \@minus -.2ex}%
-  {1.5ex \@plus .2ex}%
-  {\normalfont\normalsize\bfseries\addfontfeatures{Script=Thai}}}
+	{-3.25ex\@plus -1ex \@minus -.2ex}%
+	{1.5ex \@plus .2ex}%
+	{\normalfont\normalsize\bfseries\addfontfeatures{Script=Thai}}}
 
 \renewcommand\paragraph{\@startsection{paragraph}{4}{\z@}%
-  {-3.25ex\@plus -1ex \@minus -.2ex}%
-  {1.5ex \@plus .2ex}%
-  {\normalfont\normalsize\bfseries\addfontfeatures{Script=Thai}}}
-  
+	{-3.25ex\@plus -1ex \@minus -.2ex}%
+	{1.5ex \@plus .2ex}%
+	{\normalfont\normalsize\bfseries\addfontfeatures{Script=Thai}}}
 \makeatother
 
-\usepackage{ifthen}
+% ===============================
+% Spacing (choose one; gentle for books)
+% ===============================
+% \onehalfspacing                % (removed to avoid conflict)
+% \linespread{1.3}              % (removed to avoid conflict)
+\setstretch{1.25}
 
+% ===============================
+% tcolorbox theorem-like environments
+% ===============================
+\newtcbtheorem[number within=section]{definition}{นิยาม}%
+{colback=blue!5!white, colframe=blue!75!black, fonttitle=\bfseries,  separator sign={: }}{def}
+
+\newtcbtheorem[number within=section]{theorem}{ทฤษฎีบท}%
+{colback=green!5!white, colframe=green!60!black, fonttitle=\bfseries,  separator sign={: }}{thm}
+
+\newtcbtheorem[number within=section]{corollary}{บทตาม}%
+{colback=green!5!white, colframe=green!60!black, fonttitle=\bfseries,  separator sign={: }}{thm}
+
+\newtcbtheorem[number within=section]{example}{ตัวอย่าง}%
+{colback=orange!5!white, colframe=orange!75!black, fonttitle=\bfseries,  separator sign={: }, breakable}{ex}
+
+\newtcbtheorem[number within=section]{exercise}{Exercise}%
+{colback=orange!5!white, colframe=orange!75!black, fonttitle=\bfseries,  separator sign={: }}{exer}
+
+\newtcbtheorem[number within=chapter]{property}{คุณสมบัติ}%
+{colback=green!5!white, colframe=green!75!black, fonttitle=\bfseries,  separator sign={: }}{pro}
+
+\newtcbtheorem[number within=chapter]{algorithm}{ขั้นตอน}%
+{colback=black!5!white, colframe=black!75!black, fonttitle=\bfseries,  separator sign={: }}{algo}
+
+\newtcbtheorem{remark}{หมายเหตุ}%
+{colback=black!0!white, colframe=black!75!black, fonttitle=\bfseries,  separator sign={: }}{remark}
+
+% ===============================
+% Index
+% ===============================
+\usepackage{imakeidx}
+\makeindex
+
+% ===============================
+% Utility macros/environments
+% ===============================
 \newcommand{\blank}[2][]{%
-  \fbox{%
-    \rule{0pt}{3ex}%
-    \ifthenelse{\equal{#1}{}}%
-      {\hspace{#2}}% no label
-      {\makebox[#2][c]{(#1)}}% label like (A) centered
-  }%
+	\fbox{%
+		\rule{0pt}{3ex}%
+		\ifthenelse{\equal{#1}{}}%
+		{\hspace{#2}}% no label
+		{\makebox[#2][c]{(#1)}}% label like (A) centered
+	}%
 }
 
 \usepackage{comment}
 \usepackage{environ}   % to capture environment bodies
 \usepackage{etoolbox}  % \gappto
-\usepackage{multicol}
-\usepackage{multirow}
-\usepackage{pdfpages}
 
 \newboolean{showSolutions}
 \newboolean{solutionAtEnd}
@@ -113,70 +163,70 @@
 % Storage for deferred solutions
 \newcommand{\solutionsStore}{}        % token list
 \newcommand{\printsolutions}{% manual trigger if you want
-  \clearpage
-  \section*{Solutions}
-  \solutionsStore
+	\clearpage
+	\section*{Solutions}
+	\solutionsStore
 }
 
 \NewEnviron{solution}{%
-  \ifthenelse{\boolean{showSolutions}}{%
-    % Show solutions
-    \ifthenelse{\boolean{solutionAtEnd}}{%
-      % Defer to the end: append formatted solution to \solutionsStore
-      \gappto{\solutionsStore}{%
-        \par\noindent\textbf{วิธีทำ:}\quad
-        \BODY
-        \hfill$\square$\par\medskip
-      }%
-    }{%
-      % Inline solution (proof-like)
-      \par\noindent\textbf{วิธีทำ:}\quad
-      \BODY
-      \hfill$\square$\par
-    }%
-  }{%
-    % Hidden: keep your previous behavior (page break)
-    \newpage
-  }%
+	\ifthenelse{\boolean{showSolutions}}{%
+		% Show solutions
+		\ifthenelse{\boolean{solutionAtEnd}}{%
+			% Defer to the end: append formatted solution to \solutionsStore
+			\gappto{\solutionsStore}{%
+				\par\noindent\textbf{วิธีทำ:}\quad
+				\BODY
+				\hfill$\square$\par\medskip
+			}%
+		}{%
+			% Inline solution (proof-like)
+			\par\noindent\textbf{วิธีทำ:}\quad
+			\BODY
+			\hfill$\square$\par
+		}%
+	}{%
+		% Hidden: keep your previous behavior (page break)
+		\newpage
+	}%
 }
 
+% ===============================
+% Document
+% ===============================
 \begin{document}
-\input{Structure/Title/Title.tex}   %%%%%%%%%%%%%%%%%%        (EDIT TITLEPAGE)
-% \input{Structure/Title/Title-2.tex} %%%%%%%%%%%%%%%%%%        (SECOND VERSION)
-
-\newcommand\IndexYes{1}
-    %%%%%%%%%%%%%%%%%%   (IF A TABLE OF CONTENTS IS NOT NEEDED, CHANGE 1 TO 0)
-\input{AuxiliaryFiles/Frontmatter}  %%%%%%%%%%%%%%%%%%           (DO NOT EDIT)
- \input{Structure/Introduction}      %%%%%%%%%%%%%%%%%%     (EDIT INTRODUCTION)
-% \input{Structure/Errata}            %%%%%%%%%%%%%%%%%%           (EDIT ERRATA)
-
-\input{AuxiliaryFiles/Mainmatter}   %%%%%%%%%%%%%%%%%%           (DO NOT EDIT)
-
-          %%%%%%%%%%%%%%%%%%         (EDIT CHAPTERS)
- \input{Structure/Chapter2}
- \input{Structure/Chapter4}
- \input{Structure/Chapter3}
- \input{Structure/ChapterMarkov}
-
-\input{Structure/Chapter6}
- \input{Structure/Chapter5}
- \input{Structure/Chapter7}
-
-
- \input{Structure/Chapter8}
-
-
-\begin{appendices}               %%%%%%%%%%%%%%%%%%    (COMMENT IF NOT NEEDED)
-
-\input{AuxiliaryFiles/Appendices}    %%%%%%%%%%%%%%%%%%          (DO NOT EDIT)
-\setcounter{page}{1}
- \input{Structure/Chapter1}
-
-% \input{Structure/Appendices/Appendix-A}
- \input{Structure/homework}
- \input{Structure/quiz}
-% \input{Structure/Handnote}
-\end{appendices}
-
-\input{AuxiliaryFiles/Backmatter}    %%%%%%%%%%%%%%%%%%          (DO NOT EDIT)
+	
+	\input{Structure/Title/Title.tex}   %%%%%%%%%%%%%%%%%%        (EDIT TITLEPAGE)
+	% \input{Structure/Title/Title-2.tex} %%%%%%%%%%%%%%%%%%      (SECOND VERSION)
+	
+	\newcommand\IndexYes{1}
+	%%%%%%%%%%%%%%%%%%   (IF A TABLE OF CONTENTS IS NOT NEEDED, CHANGE 1 TO 0)
+	\input{AuxiliaryFiles/Frontmatter}  %%%%%%%%%%%%%%%%%%           (DO NOT EDIT)
+	
+	\input{Structure/Introduction}      %%%%%%%%%%%%%%%%%%     (EDIT INTRODUCTION)
+	% \input{Structure/Errata}          %%%%%%%%%%%%%%%%%%           (EDIT ERRATA)
+	
+	\input{AuxiliaryFiles/Mainmatter}   %%%%%%%%%%%%%%%%%%           (DO NOT EDIT)
+	
+	%%%%%%%%%%%%%%%%%%         (EDIT CHAPTERS)
+	\input{Structure/Chapter2}
+	\input{Structure/Chapter4}
+	\input{Structure/Chapter3}
+	\input{Structure/ChapterMarkov}
+	\input{Structure/Chapter6}
+	\input{Structure/Chapter5}
+	\input{Structure/Chapter7}
+	\input{Structure/Chapter8}
+	
+	\begin{appendices}               %%%%%%%%%%%%%%%%%%    (COMMENT IF NOT NEEDED)
+		\input{AuxiliaryFiles/Appendices}    %%%%%%%%%%%%%%%          (DO NOT EDIT)
+		\setcounter{page}{1}
+		\input{Structure/Chapter1}
+		% \input{Structure/Appendices/Appendix-A}
+		\input{Structure/homework}
+		\input{Structure/quiz}
+		% \input{Structure/Handnote}
+	\end{appendices}
+	
+	\input{AuxiliaryFiles/Backmatter}    %%%%%%%%%%%%%%%%%%          (DO NOT EDIT)
+	
 \end{document}
