--- a/assets/latex_text/Custom-2.sty
+++ b/assets/latex_text/Custom-2.sty
@@ -10,20 +10,15 @@
 
 %%%%%%%%%%%%%%      PAGE FORMAT
 \geometry{
-	a4paper,
-	top=3.5cm,
-	bottom=2.5cm,
-	left=72pt,
-	right=72pt,
-    marginparsep=5pt,
-	marginparwidth=62pt,
-	voffset=0pt,
-	hoffset=0pt,
-	headheight=54pt,
-	headsep=\baselineskip,
-	footskip=20pt,
-	footnotesep=10pt,
-    %showframe
+	paperwidth=190mm,
+	paperheight=260mm,
+	inner=24mm,
+	outer=18mm,
+	top=20mm,
+	bottom=20mm,
+	bindingoffset=6mm,
+	includeheadfoot,
+	heightrounded
 }
 
 %%%%%%%%%%      FIGURE CAPTIONS
