--- a/assets/latex/text_discrete/main_discrete_prog.tex
+++ b/assets/latex/text_discrete/main_discrete_prog.tex
@@ -53,12 +53,36 @@
 \makeindex
 
 % ===============================
-% Font configuration: TH Sarabun for Thai, Libertinus Serif for English
-% Using polyglossia's font switching mechanism
+% Font configuration: TH Sarabun as main (for Thai text), Libertinus for English
+% Since document is primarily Thai, use Thai font as main
 % ===============================
 
-% Set main Roman font to Libertinus Serif for English
-\setmainfont{LibertinusSerif}[
+% Set main font to TH Sarabun (Thai)
+\setmainfont{THSarabun.ttf}[
+Scale=1.2,
+Path=./styles/,
+Script=Thai,
+Language=Thai,
+UprightFont = *,
+BoldFont    = * Bold,
+ItalicFont  = * Italic,
+BoldItalicFont = * Bold Italic
+]
+
+% Set Thai font for polyglossia
+\newfontfamily\thaifont{THSarabun.ttf}[
+Scale=1.2,
+Path=./styles/,
+Script=Thai,
+Language=Thai,
+UprightFont = *,
+BoldFont    = * Bold,
+ItalicFont  = * Italic,
+BoldItalicFont = * Bold Italic
+]
+
+% Define English font family (use when needed for English sections)
+\newfontfamily\englishfont{LibertinusSerif}[
 Extension=.otf,
 Path=./styles/,
 UprightFont=*-Regular,
@@ -69,16 +93,8 @@ Ligatures=TeX,
 Scale=1.0
 ]
 
-% Set Thai font for polyglossia (will be used automatically when in Thai mode)
-\newfontfamily\thaifont{THSarabun.ttf}[
-Scale=1.2,
-Path=./styles/,
-Script=Thai,
-UprightFont = *,
-BoldFont    = * Bold,
-ItalicFont  = * Italic,
-BoldItalicFont = * Bold Italic
-]
+% Command for English text: \texten{English text here}
+\newcommand{\texten}[1]{{\englishfont #1}}
 
 \XeTeXlinebreaklocale "th"
 \XeTeXlinebreakskip = 0pt plus 1pt
