--- a/assets/latex/text_discrete/main_discrete_prog.tex
+++ b/assets/latex/text_discrete/main_discrete_prog.tex
@@ -290,10 +290,11 @@ BoldItalicFont = *-BoldItalic
 	\mainmatter
 
 %    \part{Basic Programming by Python}
-    \include{chapters/chapter1-basic-prob-solv}
+    
 %    \include{chapters/chapter2-syntax}
 %    
-   	\part{Basic Mathematical Reasoning and Proving}
+   	\part{Basic Thinking: Mathematical Thinking, Reasoning, and Proving}
+   	\include{chapters/chapter1-basic-prob-solv}
    	\include{chapters/chapter3-mathLang}
 %   	\include{chapters/chapter4-basicObject}
    	\include{chapters/chapter5-logic-and-Reason}
@@ -313,7 +314,9 @@ BoldItalicFont = *-BoldItalic
    	\include{chapters/graphTheo}
 %   	\include{Automata}
 	
+	\part{Basic Algorithm Design based upon Discrete Mathematics}
 	
+	\include{chapters/recurseAlgor}
 	\backmatter
 %	\include{chapters/solution}
 	\printindex
