--- a/assets/latex/text_discrete/main_discrete_prog.tex
+++ b/assets/latex/text_discrete/main_discrete_prog.tex
@@ -292,7 +292,8 @@ BoldItalicFont = *-BoldItalic
 %    \part{Basic Programming by Python}
     
 %    \include{chapters/chapter2-syntax}
-%    
+%   
+	\include{chapters/prologue} 
    	\part{Basic Thinking: Mathematical Thinking, Reasoning, and Proving}
    	\include{chapters/chapter1-basic-prob-solv}
    	\include{chapters/chapter3-mathLang}
