--- a/assets/latex/text_discrete/main_discrete_prog.tex
+++ b/assets/latex/text_discrete/main_discrete_prog.tex
@@ -309,6 +309,7 @@ BoldItalicFont = *-BoldItalic
    	\include{chapters/NumberTheo}
    	\include{chapters/NumberTheo_proof}
    	\include{chapters/NumberTheo_prog}
+   	\include{chapters/IntroNumberSys}
    	\include{chapters/Combinatoric}
    	\include{chapters/Combinatoric_prog}
    	\include{chapters/Recursion}
